Remove faas-cli client, use openfaas API
