# swagger_server/swagger/swagger.yaml
@@ -111,7 +111,7 @@ paths:
         required: true
         type: "string"
       - in: "body"
-        name: "input"
+        name: "data"
         description: "(Optional) data to pass to function"
         required: false
         schema:
@@ -159,7 +159,7 @@ paths:
         required: true
         type: "string"
       - in: "body"
-        name: "input"
+        name: "data"
         description: "(Optional) data to pass to function"
         required: false
         schema:
@@ -193,88 +193,25 @@ definitions:
     type: "object"
     required:
     - "image"
-    - "service"
+    - "name"
+    - "script"
     properties:
-      service:
+      name:
         type: "string"
         example: "nodeinfo"
         description: "Name of deployed function"
-      network:
-        type: "string"
-        example: "func_functions"
-        description: "Docker swarm network, usually func_functions"
       image:
         type: "string"
         example: "functions/nodeinfo:latest"
         description: "Docker image in accessible registry"
-      envProcess:
+      script:
         type: "string"
-        example: "node main.js"
-        description: "Process for watchdog to fork"
-      envVars:
-        type: "object"
-        description: "Overrides to environmental variables"
-        additionalProperties:
-          type: "string"
-      constraints:
-        type: "array"
-        items:
-          type: "string"
-          example: "node.platform.os == linux"
-          description: "Constraints are specific to OpenFaaS Provider"
-      labels:
-        type: "array"
-        description: "An array of labels used by the back-end for making scheduling\
-          \ or routing decisions"
-        items:
-          type: "string"
-      annotations:
-        type: "array"
-        description: "An array of annotations used by the back-end for management,\
-          \ orchestration, events and build tasks"
-        items:
-          type: "string"
-      secrets:
-        type: "array"
-        items:
-          type: "string"
-          example: "secret-name-1"
-          description: "An array of names of secrets that are required to be loaded\
-            \ from the Docker Swarm."
-      registryAuth:
-        type: "string"
-        example: "dXNlcjpwYXNzd29yZA=="
-        description: "Private registry base64-encoded basic auth (as present in ~/.docker/config.json)"
-      limits:
-        $ref: "#/definitions/FunctionDefinition_limits"
-      requests:
-        $ref: "#/definitions/FunctionDefinition_limits"
+        example: "ZWNobyAiaXQgd29ya3MhIg=="
+        description: "Script to be executed inside the function coded in base64"
     example:
       image: "functions/nodeinfo:latest"
-      envProcess: "node main.js"
-      service: "nodeinfo"
-      envVars:
-        key: "envVars"
-      annotations:
-      - "annotations"
-      - "annotations"
-      registryAuth: "dXNlcjpwYXNzd29yZA=="
-      requests:
-        memory: "128M"
-        cpu: "0.01"
-      constraints:
-      - "node.platform.os == linux"
-      - "node.platform.os == linux"
-      secrets:
-      - "secret-name-1"
-      - "secret-name-1"
-      limits:
-        memory: "128M"
-        cpu: "0.01"
-      network: "func_functions"
-      labels:
-      - "labels"
-      - "labels"
+      name: "nodeinfo"
+      script: "ZWNobyAiaXQgd29ya3MhIg=="
   FunctionListEntry:
     type: "object"
     required:
@@ -332,17 +269,6 @@ definitions:
       availableReplicas: 2
       labels:
         key: "labels"
-  FunctionDefinition_limits:
-    properties:
-      memory:
-        type: "string"
-        example: "128M"
-      cpu:
-        type: "string"
-        example: "0.01"
-    example:
-      memory: "128M"
-      cpu: "0.01"
 externalDocs:
   description: "More documentation available on Github"
   url: "https://github.com/grycap/oscar"
